# masir

./: Cargo.toml  README.md  justfile
.github/: pull_request_template.md
.github/workflows/: windows.yaml
src/: main.rs
wix/: main.wxs
